fix jcstress test failure due to jdk version specific jvm args