@@ -40,6 +40,10 @@ tasks.register<JCStress>("jcstress") {
   classpath(jcstressRuntimeClasspath, jcstressJar.map { it.archiveFile })
   inputs.files(compileJcstressJava.map { it.outputs.files },
     jcstressJar.map { it.archiveFile }, tasks.jar.map { it.archiveFile })
+  val javaVersion = java.toolchain.languageVersion.map { it.asInt() }
+  jvmArgumentProviders.add {
+    if (javaVersion.get() >= 25) listOf("-XX:+UseCompactObjectHeaders") else emptyList()
+  }
   javaLauncher = javaToolchains.launcherFor {
     vendor = java.toolchain.vendor
     implementation = java.toolchain.implementation
